--- a/v2.ipynb
+++ b/v2.ipynb
@@ -1028,7 +1028,6 @@
     "\n",
     "################## 模型融合 ##################\n",
     "class Net2(nn.Module):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super(Net2,self).__init__()\n",
     "        self.conv1 = nn.Conv1d(in_channels = 1,out_channels = 32,kernel_size = 11,stride = 1,padding = 5)\n",
@@ -1069,7 +1068,6 @@
     "        return x\n",
     "\n",
     "class Net3(nn.Module):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super(Net3,self).__init__()\n",
     "        self.conv1 = nn.Conv1d(in_channels = 1,out_channels = 32,kernel_size = 11,stride = 1,padding = 5)\n",
@@ -1106,7 +1104,6 @@
     "        return x\n",
     "\n",
     "class Net4(nn.Module):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super(Net4,self).__init__()\n",
     "        self.conv1 = nn.Conv1d(in_channels = 1,out_channels = 32,kernel_size = 11,stride = 1,padding = 5)\n",
@@ -1209,7 +1206,7 @@
     "\n",
     "\n",
     "net2_states = []\n",
-    "sk = StratifiedKFold(n_splits=10, shuffle=True, random_state=2021)\n",
+    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2021)\n",
     "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
     "    x_train = net_train_data[train]\n",
     "    y_train = net_train_label[train]\n",
@@ -1217,7 +1214,7 @@
     "    y_valid = net_train_label[valid]\n",
     "    \n",
     "    # # 对训练数据进行随机过采样\n",
-    "    x_train, y_train = RandomOverSampler(random_state=2021).fit_resample(x_train, y_train)\n",
+    "    # x_train, y_train = RandomOverSampler(random_state=2021).fit_resample(x_train, y_train)\n",
     "\n",
     "    x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
     "    x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
@@ -1237,7 +1234,7 @@
     "\n",
     "\n",
     "net3_states = []\n",
-    "sk = StratifiedKFold(n_splits=10, shuffle=True, random_state=2022)\n",
+    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2022)\n",
     "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
     "    x_train = net_train_data[train]\n",
     "    y_train = net_train_label[train]\n",
@@ -1245,7 +1242,7 @@
     "    y_valid = net_train_label[valid]\n",
     "    \n",
     "    # # 对训练数据进行随机过采样\n",
-    "    x_train, y_train = RandomOverSampler(random_state=2022).fit_resample(x_train, y_train)\n",
+    "    # x_train, y_train = RandomOverSampler(random_state=2022).fit_resample(x_train, y_train)\n",
     "\n",
     "    x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
     "    x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
@@ -1265,7 +1262,7 @@
     "\n",
     "\n",
     "net4_states = []\n",
-    "sk = StratifiedKFold(n_splits=10, shuffle=True, random_state=2023)\n",
+    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2023)\n",
     "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
     "    x_train = net_train_data[train]\n",
     "    y_train = net_train_label[train]\n",
@@ -1273,7 +1270,7 @@
     "    y_valid = net_train_label[valid]\n",
     "    \n",
     "    # # 对训练数据进行随机过采样\n",
-    "    x_train, y_train = RandomOverSampler(random_state=2023).fit_resample(x_train, y_train)\n",
+    "    # x_train, y_train = RandomOverSampler(random_state=2023).fit_resample(x_train, y_train)\n",
     "\n",
     "    x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
     "    x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
@@ -1294,7 +1291,7 @@
     "\n",
     "net1_states = []\n",
     "# 采用 10 折交叉验证，训练 10 个模型\n",
-    "sk = StratifiedKFold(n_splits=10, shuffle=True, random_state=2020)\n",
+    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2020)\n",
     "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
     "    x_train = net_train_data[train]\n",
     "    y_train = net_train_label[train]\n",
@@ -1302,7 +1299,7 @@
     "    y_valid = net_train_label[valid]\n",
     "    \n",
     "    # # 对训练数据进行随机过采样\n",
-    "    x_train, y_train = RandomOverSampler(random_state=2020).fit_resample(x_train, y_train)\n",
+    "    # x_train, y_train = RandomOverSampler(random_state=2020).fit_resample(x_train, y_train)\n",
     "\n",
     "    x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
     "    x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
@@ -1394,7 +1391,6 @@
     "        return x\n",
     "\n",
     "class Net2(nn.Module):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super(Net2,self).__init__()\n",
     "        self.conv1 = nn.Conv1d(in_channels = 1,out_channels = 32,kernel_size = 11,stride = 1,padding = 5)\n",
@@ -1435,7 +1431,6 @@
     "        return x\n",
     "\n",
     "class Net3(nn.Module):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super(Net3,self).__init__()\n",
     "        self.conv1 = nn.Conv1d(in_channels = 1,out_channels = 32,kernel_size = 11,stride = 1,padding = 5)\n",
@@ -1472,7 +1467,6 @@
     "        return x\n",
     "\n",
     "class Net4(nn.Module):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super(Net4,self).__init__()\n",
     "        self.conv1 = nn.Conv1d(in_channels = 1,out_channels = 32,kernel_size = 11,stride = 1,padding = 5)\n",
@@ -1582,7 +1576,6 @@
     "            cur_pred.extend(output)\n",
     "    test_pred.append(cur_pred)\n",
     "\n",
-    "\n",
     "test_pred = np.array(test_pred)\n",
     "test_avg = test_pred.mean(axis=0)\n",
     "test_y_pred = test_avg.argmax(axis=1)\n",
@@ -1591,13 +1584,50 @@
     "\n",
     "# 将 test_avg 写入 submit.csv\n",
     "pred = pd.DataFrame(test_avg)\n",
-    "result=pd.read_csv('/home/jiananyuan/Desktop/DM_homework/dataset/sample_submit.csv')\n",
-    "result['label_0']=pred[0]\n",
-    "result['label_1']=pred[1]\n",
-    "result['label_2']=pred[2]\n",
-    "result['label_3']=pred[3]\n",
-    "result.to_csv('submit.csv',index=False)\n",
-    "print(result)\n"
+    "submit=pd.read_csv('/home/jiananyuan/Desktop/DM_homework/dataset/sample_submit.csv')\n",
+    "submit['label_0']=pred[0]\n",
+    "submit['label_1']=pred[1]\n",
+    "submit['label_2']=pred[2]\n",
+    "submit['label_3']=pred[3]\n",
+    "# submit.to_csv('submit.csv',index=False)\n",
+    "# print(submit)\n",
+    "submit.to_csv('tmp_submit.csv',index=False)\n",
+    "\n",
+    "# 后处理\n",
+    "# 第一次后处理未涉及的难样本 index\n",
+    "others = []\n",
+    "# 第一次后处理 - 将预测概率值大于 0.5 的样本的概率置 1，其余置 0\n",
+    "threshold = 0.5\n",
+    "for index, row in submit.iterrows():\n",
+    "    row_max = max(list(row[1:]))  # 当前行中的最大类别概率预测值\n",
+    "    if row_max > threshold:\n",
+    "        for i in range(1, 5):\n",
+    "            if row[i] > threshold:\n",
+    "                submit.iloc[index, i] = 1  # 大于 0.5 的类别概率预测值置 1\n",
+    "            else:\n",
+    "                submit.iloc[index, i] = 0  # 其余类别概率预测值置 0\n",
+    "    else:\n",
+    "        others.append(index)  # 否则，没有类别概率预测值不小于 0.5，加入第一次后处理未涉及的难样本列表，等待第二次后处理\n",
+    "        # print(index, row)\n",
+    "# submit.head(5)\n",
+    "\n",
+    "# 第二次后处理 - 在预测概率值均不大于 0.5 的样本中，若最大预测值与次大预测值相差大于 0.04，则将最大预测值置 1，其余预测值置 0\n",
+    "#                否则，对最大预测值和次大预测值不处理 (难分类)，仅对其余样本预测值置 0\n",
+    "for idx in others:\n",
+    "    value = submit.iloc[idx].values[1:]\n",
+    "    ordered_value = sorted([(v, j) for j, v in enumerate(value)], reverse=True)  # 根据类别概率预测值大小排序\n",
+    "    #print(ordered_value)\n",
+    "    if ordered_value[0][0] - ordered_value[1][0] >= 0.04:  # 最大与次大值相差至少 0.04\n",
+    "        submit.iloc[idx, ordered_value[0][1]+1] = 1  # 则足够置信最大概率预测值并置为 1\n",
+    "        for k in range(1, 4):\n",
+    "            submit.iloc[idx, ordered_value[k][1]+1] = 0  # 对非最大的其余三个类别概率预测值置 0\n",
+    "    else:\n",
+    "        for s in range(2, 4):\n",
+    "            submit.iloc[idx, ordered_value[s][1]+1] = 0  # 难分样本，仅对最小的两个类别概率预测值置 0        \n",
+    "    # print(submit.iloc[idx]) \n",
+    "\n",
+    "submit.to_csv('submit.csv',index=False)\n",
+    "print(submit)"
    ]
   },
   {
