--- a/v2.ipynb
+++ b/v2.ipynb
@@ -194,25 +194,17 @@
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Sequential(\n",
-    "            nn.Conv1d(\n",
-    "                in_channels=1,\n",
-    "                out_channels=64,\n",
-    "                kernel_size=7,\n",
-    "                stride=1,\n",
-    "                padding=3,\n",
-    "            ),\n",
+    "            nn.Conv1d(in_channels=1, out_channels=64, kernel_size=7, stride=1, padding=3),\n",
     "            nn.BatchNorm1d(64),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool1d(kernel_size=2)\n",
     "        )\n",
-    "        \n",
     "        self.conv2 = nn.Sequential(\n",
     "            nn.Conv1d(64, 128, 5, 1, 2),\n",
     "            nn.BatchNorm1d(128),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool1d(2)\n",
     "        )\n",
-    "        \n",
     "        self.conv3 = nn.Sequential(\n",
     "            nn.Conv1d(128, 256, 3, 1, 1), \n",
     "            nn.BatchNorm1d(256),\n",
@@ -222,28 +214,23 @@
     "            nn.ReLU(),\n",
     "            nn.MaxPool1d(2)\n",
     "        )\n",
-    "        \n",
     "        self.fc1 = nn.Sequential(\n",
     "            nn.Linear(6400, 4096),\n",
     "            nn.BatchNorm1d(4096),\n",
     "            nn.ReLU(),\n",
     "        )\n",
-    "        \n",
     "        self.fc2 = nn.Sequential(\n",
     "            nn.Linear(4096, 64),\n",
     "            nn.BatchNorm1d(64),\n",
     "            nn.ReLU(),\n",
     "        )\n",
-    "        \n",
     "        self.fc3 = nn.Linear(64, 4)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.conv1(x)\n",
     "        x = self.conv2(x)\n",
     "        x = self.conv3(x)\n",
-    "\n",
     "        x = x.view(x.size(0), -1)\n",
-    "#         print(x.size())\n",
     "        x = self.fc1(x)\n",
     "        x = self.fc2(x)\n",
     "        x = self.fc3(x)\n",
@@ -262,16 +249,11 @@
     "\n",
     "# 训练网络\n",
     "def train_net(net, train_loader, valid_loader, EPOCH=20, LR=1e-5):\n",
-    "    # 交叉熵作为损失函数\n",
     "    loss_fn = nn.CrossEntropyLoss()\n",
-    "    \n",
-    "    # Adam 优化器\n",
     "    optimizer = torch.optim.Adam(net.parameters(), lr=LR)\n",
-    "    \n",
     "    # 保留准确率最高的模型\n",
     "    best_state = copy.deepcopy(net.state_dict())\n",
     "    best_acc = 0\n",
-    "\n",
     "    for epoch in range(EPOCH):\n",
     "        net.train()\n",
     "        train_l = 0\n",
@@ -282,10 +264,8 @@
     "            optimizer.zero_grad() \n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "\n",
     "            train_l += loss.cpu().item()\n",
     "            train_num += len(b_x)\n",
-    "        \n",
     "        net.eval()\n",
     "        with torch.no_grad():\n",
     "            valid_l = 0\n",
@@ -295,7 +275,6 @@
     "                output = net(b_x)\n",
     "                loss = loss_fn(output, b_y)\n",
     "                valid_l += loss.cpu().item()\n",
-    "\n",
     "                pred_y = torch.argmax(output, dim=1)\n",
     "                valid_num += len(b_x)\n",
     "                right_num += (pred_y == b_y).sum().item()\n",
@@ -303,9 +282,8 @@
     "        if valid_acc >= best_acc:\n",
     "            best_acc = valid_acc\n",
     "            best_state = copy.deepcopy(net.state_dict())\n",
-    "        print('Epoch {} | train_loss {:.2e} | valid_loss {:.2e} | acc {:f} | best_acc {:f}'.format(epoch + 1, train_l / train_num, valid_l / valid_num, valid_acc, best_acc))\n",
-    "        \n",
-    "    \n",
+    "        print('Epoch {} | train_loss {:.2e} | valid_loss {:.2e} | acc {:f} | best_acc {:f}'.format(\n",
+    "              epoch + 1, train_l / train_num, valid_l / valid_num, valid_acc, best_acc))\n",
     "    return best_state\n"
    ]
   },
@@ -1205,93 +1183,93 @@
     "import time\n",
     "\n",
     "\n",
-    "net2_states = []\n",
-    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2021)\n",
-    "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
-    "    x_train = net_train_data[train]\n",
-    "    y_train = net_train_label[train]\n",
-    "    x_valid = net_train_data[valid]\n",
-    "    y_valid = net_train_label[valid]\n",
+    "# net2_states = []\n",
+    "# sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2021)\n",
+    "# for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
+    "#     x_train = net_train_data[train]\n",
+    "#     y_train = net_train_label[train]\n",
+    "#     x_valid = net_train_data[valid]\n",
+    "#     y_valid = net_train_label[valid]\n",
     "    \n",
-    "    # # 对训练数据进行随机过采样\n",
-    "    # x_train, y_train = RandomOverSampler(random_state=2021).fit_resample(x_train, y_train)\n",
+    "#     # # 对训练数据进行随机过采样\n",
+    "#     # x_train, y_train = RandomOverSampler(random_state=2021).fit_resample(x_train, y_train)\n",
     "\n",
-    "    x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
-    "    x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
-    "    y_train = torch.tensor(y_train, dtype=int)\n",
-    "    y_valid = torch.tensor(y_valid, dtype=int)\n",
+    "#     x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
+    "#     x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
+    "#     y_train = torch.tensor(y_train, dtype=int)\n",
+    "#     y_valid = torch.tensor(y_valid, dtype=int)\n",
     "    \n",
-    "    train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
-    "    valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
+    "#     train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
+    "#     valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
     "    \n",
-    "    print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
-    "    net = Net2().to(device)\n",
-    "    s = train_net(net, train_loader, valid_loader, 30)\n",
-    "    net2_states.append(s)\n",
+    "#     print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
+    "#     net = Net2().to(device)\n",
+    "#     s = train_net(net, train_loader, valid_loader, 30)\n",
+    "#     net2_states.append(s)\n",
     "\n",
-    "# 保存模型参数\n",
-    "torch.save(net2_states, 'net2_state.pkl')\n",
+    "# # 保存模型参数\n",
+    "# torch.save(net2_states, 'net2_state.pkl')\n",
     "\n",
     "\n",
-    "net3_states = []\n",
-    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2022)\n",
-    "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
-    "    x_train = net_train_data[train]\n",
-    "    y_train = net_train_label[train]\n",
-    "    x_valid = net_train_data[valid]\n",
-    "    y_valid = net_train_label[valid]\n",
+    "# net3_states = []\n",
+    "# sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2022)\n",
+    "# for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
+    "#     x_train = net_train_data[train]\n",
+    "#     y_train = net_train_label[train]\n",
+    "#     x_valid = net_train_data[valid]\n",
+    "#     y_valid = net_train_label[valid]\n",
     "    \n",
-    "    # # 对训练数据进行随机过采样\n",
-    "    # x_train, y_train = RandomOverSampler(random_state=2022).fit_resample(x_train, y_train)\n",
+    "#     # # 对训练数据进行随机过采样\n",
+    "#     # x_train, y_train = RandomOverSampler(random_state=2022).fit_resample(x_train, y_train)\n",
     "\n",
-    "    x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
-    "    x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
-    "    y_train = torch.tensor(y_train, dtype=int)\n",
-    "    y_valid = torch.tensor(y_valid, dtype=int)\n",
+    "#     x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
+    "#     x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
+    "#     y_train = torch.tensor(y_train, dtype=int)\n",
+    "#     y_valid = torch.tensor(y_valid, dtype=int)\n",
     "    \n",
-    "    train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
-    "    valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
+    "#     train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
+    "#     valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
     "    \n",
-    "    print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
-    "    net = Net3().to(device)\n",
-    "    s = train_net(net, train_loader, valid_loader, 30)\n",
-    "    net3_states.append(s)\n",
+    "#     print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
+    "#     net = Net3().to(device)\n",
+    "#     s = train_net(net, train_loader, valid_loader, 30)\n",
+    "#     net3_states.append(s)\n",
     "\n",
-    "# 保存模型参数\n",
-    "torch.save(net3_states, 'net3_state.pkl')\n",
+    "# # 保存模型参数\n",
+    "# torch.save(net3_states, 'net3_state.pkl')\n",
     "\n",
     "\n",
-    "net4_states = []\n",
-    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2023)\n",
-    "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
-    "    x_train = net_train_data[train]\n",
-    "    y_train = net_train_label[train]\n",
-    "    x_valid = net_train_data[valid]\n",
-    "    y_valid = net_train_label[valid]\n",
+    "# net4_states = []\n",
+    "# sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2023)\n",
+    "# for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
+    "#     x_train = net_train_data[train]\n",
+    "#     y_train = net_train_label[train]\n",
+    "#     x_valid = net_train_data[valid]\n",
+    "#     y_valid = net_train_label[valid]\n",
     "    \n",
-    "    # # 对训练数据进行随机过采样\n",
-    "    # x_train, y_train = RandomOverSampler(random_state=2023).fit_resample(x_train, y_train)\n",
+    "#     # # 对训练数据进行随机过采样\n",
+    "#     # x_train, y_train = RandomOverSampler(random_state=2023).fit_resample(x_train, y_train)\n",
     "\n",
-    "    x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
-    "    x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
-    "    y_train = torch.tensor(y_train, dtype=int)\n",
-    "    y_valid = torch.tensor(y_valid, dtype=int)\n",
+    "#     x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
+    "#     x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
+    "#     y_train = torch.tensor(y_train, dtype=int)\n",
+    "#     y_valid = torch.tensor(y_valid, dtype=int)\n",
     "    \n",
-    "    train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
-    "    valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
+    "#     train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
+    "#     valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
     "    \n",
-    "    print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
-    "    net = Net4().to(device)\n",
-    "    s = train_net(net, train_loader, valid_loader, 30)\n",
-    "    net4_states.append(s)\n",
+    "#     print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
+    "#     net = Net4().to(device)\n",
+    "#     s = train_net(net, train_loader, valid_loader, 30)\n",
+    "#     net4_states.append(s)\n",
     "\n",
-    "# 保存模型参数\n",
-    "torch.save(net4_states, 'net4_state.pkl')\n",
+    "# # 保存模型参数\n",
+    "# torch.save(net4_states, 'net4_state.pkl')\n",
     "\n",
     "\n",
     "net1_states = []\n",
     "# 采用 10 折交叉验证，训练 10 个模型\n",
-    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2020)\n",
+    "sk = StratifiedKFold(n_splits=10, shuffle=True, random_state=2020)\n",
     "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
     "    x_train = net_train_data[train]\n",
     "    y_train = net_train_label[train]\n",
@@ -1412,7 +1390,6 @@
     "            nn.Linear(128,4),\n",
     "            nn.Softmax(dim=1)\n",
     "        )\n",
-    "\n",
     "    def forward(self,x):\n",
     "        # x = x.view(x.size(0),1,x.size(1))\n",
     "        x = self.bn1(x)\n",
@@ -1450,7 +1427,6 @@
     "            nn.Linear(128,4),\n",
     "            nn.Softmax(dim=1)\n",
     "        )\n",
-    "\n",
     "    def forward(self,x):\n",
     "        # x = x.view(x.size(0),1,x.size(1))\n",
     "        x = self.bn1(x)\n",
@@ -1488,7 +1464,6 @@
     "            nn.Linear(128,4),\n",
     "            nn.Softmax(dim=1)\n",
     "        )\n",
-    "\n",
     "    def forward(self,x):\n",
     "        # x = x.view(x.size(0),1,x.size(1))\n",
     "        x = self.bn1(x)\n",
@@ -1534,52 +1509,52 @@
     "            cur_pred.extend(output)\n",
     "    test_pred.append(cur_pred)\n",
     "\n",
-    "net = Net2().to(device)\n",
-    "# 读入模型参数\n",
-    "net_states = torch.load('net2_state.pkl')\n",
-    "for s in net_states:\n",
-    "    net.load_state_dict(s)\n",
-    "    net.eval()\n",
-    "    with torch.no_grad():\n",
-    "        cur_pred = []\n",
-    "        for i in range(100):\n",
-    "            b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
-    "            output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
-    "            cur_pred.extend(output)\n",
-    "    test_pred.append(cur_pred)\n",
+    "# net = Net2().to(device)\n",
+    "# # 读入模型参数\n",
+    "# net_states = torch.load('net2_state.pkl')\n",
+    "# for s in net_states:\n",
+    "#     net.load_state_dict(s)\n",
+    "#     net.eval()\n",
+    "#     with torch.no_grad():\n",
+    "#         cur_pred = []\n",
+    "#         for i in range(100):\n",
+    "#             b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
+    "#             output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
+    "#             cur_pred.extend(output)\n",
+    "#     test_pred.append(cur_pred)\n",
     "\n",
-    "net = Net3().to(device)\n",
-    "# 读入模型参数\n",
-    "net_states = torch.load('net3_state.pkl')\n",
-    "for s in net_states:\n",
-    "    net.load_state_dict(s)\n",
-    "    net.eval()\n",
-    "    with torch.no_grad():\n",
-    "        cur_pred = []\n",
-    "        for i in range(100):\n",
-    "            b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
-    "            output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
-    "            cur_pred.extend(output)\n",
-    "    test_pred.append(cur_pred)\n",
+    "# net = Net3().to(device)\n",
+    "# # 读入模型参数\n",
+    "# net_states = torch.load('net3_state.pkl')\n",
+    "# for s in net_states:\n",
+    "#     net.load_state_dict(s)\n",
+    "#     net.eval()\n",
+    "#     with torch.no_grad():\n",
+    "#         cur_pred = []\n",
+    "#         for i in range(100):\n",
+    "#             b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
+    "#             output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
+    "#             cur_pred.extend(output)\n",
+    "#     test_pred.append(cur_pred)\n",
     "\n",
-    "net = Net4().to(device)\n",
-    "# 读入模型参数\n",
-    "net_states = torch.load('net4_state.pkl')\n",
-    "for s in net_states:\n",
-    "    net.load_state_dict(s)\n",
-    "    net.eval()\n",
-    "    with torch.no_grad():\n",
-    "        cur_pred = []\n",
-    "        for i in range(100):\n",
-    "            b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
-    "            output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
-    "            cur_pred.extend(output)\n",
-    "    test_pred.append(cur_pred)\n",
+    "# net = Net4().to(device)\n",
+    "# # 读入模型参数\n",
+    "# net_states = torch.load('net4_state.pkl')\n",
+    "# for s in net_states:\n",
+    "#     net.load_state_dict(s)\n",
+    "#     net.eval()\n",
+    "#     with torch.no_grad():\n",
+    "#         cur_pred = []\n",
+    "#         for i in range(100):\n",
+    "#             b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
+    "#             output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
+    "#             cur_pred.extend(output)\n",
+    "#     test_pred.append(cur_pred)\n",
     "\n",
     "test_pred = np.array(test_pred)\n",
     "test_avg = test_pred.mean(axis=0)\n",
     "test_y_pred = test_avg.argmax(axis=1)\n",
-    "print(test_y_pred)\n",
+    "# print(test_y_pred)\n",
     "\n",
     "\n",
     "# 将 test_avg 写入 submit.csv\n",
@@ -1590,42 +1565,33 @@
     "submit['label_2']=pred[2]\n",
     "submit['label_3']=pred[3]\n",
     "# submit.to_csv('submit.csv',index=False)\n",
-    "# print(submit)\n",
+    "print(submit)\n",
     "submit.to_csv('tmp_submit.csv',index=False)\n",
     "\n",
     "# 后处理\n",
-    "# 第一次后处理未涉及的难样本 index\n",
     "others = []\n",
-    "# 第一次后处理 - 将预测概率值大于 0.5 的样本的概率置 1，其余置 0\n",
     "threshold = 0.5\n",
     "for index, row in submit.iterrows():\n",
-    "    row_max = max(list(row[1:]))  # 当前行中的最大类别概率预测值\n",
+    "    row_max = max(list(row[1:]))\n",
     "    if row_max > threshold:\n",
     "        for i in range(1, 5):\n",
     "            if row[i] > threshold:\n",
-    "                submit.iloc[index, i] = 1  # 大于 0.5 的类别概率预测值置 1\n",
+    "                submit.iloc[index, i] = 1\n",
     "            else:\n",
-    "                submit.iloc[index, i] = 0  # 其余类别概率预测值置 0\n",
+    "                submit.iloc[index, i] = 0\n",
     "    else:\n",
-    "        others.append(index)  # 否则，没有类别概率预测值不小于 0.5，加入第一次后处理未涉及的难样本列表，等待第二次后处理\n",
-    "        # print(index, row)\n",
-    "# submit.head(5)\n",
-    "\n",
-    "# 第二次后处理 - 在预测概率值均不大于 0.5 的样本中，若最大预测值与次大预测值相差大于 0.04，则将最大预测值置 1，其余预测值置 0\n",
-    "#                否则，对最大预测值和次大预测值不处理 (难分类)，仅对其余样本预测值置 0\n",
+    "        others.append(index)\n",
     "for idx in others:\n",
     "    value = submit.iloc[idx].values[1:]\n",
-    "    ordered_value = sorted([(v, j) for j, v in enumerate(value)], reverse=True)  # 根据类别概率预测值大小排序\n",
-    "    #print(ordered_value)\n",
-    "    if ordered_value[0][0] - ordered_value[1][0] >= 0.04:  # 最大与次大值相差至少 0.04\n",
-    "        submit.iloc[idx, ordered_value[0][1]+1] = 1  # 则足够置信最大概率预测值并置为 1\n",
+    "    # 根据类别概率预测值大小排序\n",
+    "    ordered_value = sorted([(v, j) for j, v in enumerate(value)], reverse=True)  \n",
+    "    if ordered_value[0][0] - ordered_value[1][0] >= 0.05:\n",
+    "        submit.iloc[idx, ordered_value[0][1]+1] = 1\n",
     "        for k in range(1, 4):\n",
-    "            submit.iloc[idx, ordered_value[k][1]+1] = 0  # 对非最大的其余三个类别概率预测值置 0\n",
+    "            submit.iloc[idx, ordered_value[k][1]+1] = 0\n",
     "    else:\n",
     "        for s in range(2, 4):\n",
-    "            submit.iloc[idx, ordered_value[s][1]+1] = 0  # 难分样本，仅对最小的两个类别概率预测值置 0        \n",
-    "    # print(submit.iloc[idx]) \n",
-    "\n",
+    "            submit.iloc[idx, ordered_value[s][1]+1] = 0   \n",
     "submit.to_csv('submit.csv',index=False)\n",
     "print(submit)"
    ]
