--- a/v2.ipynb
+++ b/v2.ipynb
@@ -1183,88 +1183,88 @@
     "import time\n",
     "\n",
     "\n",
-    "# net2_states = []\n",
-    "# sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2021)\n",
-    "# for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
-    "#     x_train = net_train_data[train]\n",
-    "#     y_train = net_train_label[train]\n",
-    "#     x_valid = net_train_data[valid]\n",
-    "#     y_valid = net_train_label[valid]\n",
+    "net2_states = []\n",
+    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2021)\n",
+    "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
+    "    x_train = net_train_data[train]\n",
+    "    y_train = net_train_label[train]\n",
+    "    x_valid = net_train_data[valid]\n",
+    "    y_valid = net_train_label[valid]\n",
     "    \n",
-    "#     # # 对训练数据进行随机过采样\n",
-    "#     # x_train, y_train = RandomOverSampler(random_state=2021).fit_resample(x_train, y_train)\n",
+    "    # # 对训练数据进行随机过采样\n",
+    "    # x_train, y_train = RandomOverSampler(random_state=2021).fit_resample(x_train, y_train)\n",
     "\n",
-    "#     x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
-    "#     x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
-    "#     y_train = torch.tensor(y_train, dtype=int)\n",
-    "#     y_valid = torch.tensor(y_valid, dtype=int)\n",
+    "    x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
+    "    x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
+    "    y_train = torch.tensor(y_train, dtype=int)\n",
+    "    y_valid = torch.tensor(y_valid, dtype=int)\n",
     "    \n",
-    "#     train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
-    "#     valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
+    "    train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
+    "    valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
     "    \n",
-    "#     print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
-    "#     net = Net2().to(device)\n",
-    "#     s = train_net(net, train_loader, valid_loader, 30)\n",
-    "#     net2_states.append(s)\n",
+    "    print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
+    "    net = Net2().to(device)\n",
+    "    s = train_net(net, train_loader, valid_loader, 200)\n",
+    "    net2_states.append(s)\n",
     "\n",
-    "# # 保存模型参数\n",
-    "# torch.save(net2_states, 'net2_state.pkl')\n",
+    "# 保存模型参数\n",
+    "torch.save(net2_states, 'net2_state.pkl')\n",
     "\n",
     "\n",
-    "# net3_states = []\n",
-    "# sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2022)\n",
-    "# for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
-    "#     x_train = net_train_data[train]\n",
-    "#     y_train = net_train_label[train]\n",
-    "#     x_valid = net_train_data[valid]\n",
-    "#     y_valid = net_train_label[valid]\n",
+    "net3_states = []\n",
+    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2022)\n",
+    "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
+    "    x_train = net_train_data[train]\n",
+    "    y_train = net_train_label[train]\n",
+    "    x_valid = net_train_data[valid]\n",
+    "    y_valid = net_train_label[valid]\n",
     "    \n",
-    "#     # # 对训练数据进行随机过采样\n",
-    "#     # x_train, y_train = RandomOverSampler(random_state=2022).fit_resample(x_train, y_train)\n",
+    "    # # 对训练数据进行随机过采样\n",
+    "    # x_train, y_train = RandomOverSampler(random_state=2022).fit_resample(x_train, y_train)\n",
     "\n",
-    "#     x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
-    "#     x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
-    "#     y_train = torch.tensor(y_train, dtype=int)\n",
-    "#     y_valid = torch.tensor(y_valid, dtype=int)\n",
+    "    x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
+    "    x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
+    "    y_train = torch.tensor(y_train, dtype=int)\n",
+    "    y_valid = torch.tensor(y_valid, dtype=int)\n",
     "    \n",
-    "#     train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
-    "#     valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
+    "    train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
+    "    valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
     "    \n",
-    "#     print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
-    "#     net = Net3().to(device)\n",
-    "#     s = train_net(net, train_loader, valid_loader, 30)\n",
-    "#     net3_states.append(s)\n",
+    "    print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
+    "    net = Net3().to(device)\n",
+    "    s = train_net(net, train_loader, valid_loader, 200)\n",
+    "    net3_states.append(s)\n",
     "\n",
-    "# # 保存模型参数\n",
-    "# torch.save(net3_states, 'net3_state.pkl')\n",
+    "# 保存模型参数\n",
+    "torch.save(net3_states, 'net3_state.pkl')\n",
     "\n",
     "\n",
-    "# net4_states = []\n",
-    "# sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2023)\n",
-    "# for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
-    "#     x_train = net_train_data[train]\n",
-    "#     y_train = net_train_label[train]\n",
-    "#     x_valid = net_train_data[valid]\n",
-    "#     y_valid = net_train_label[valid]\n",
+    "net4_states = []\n",
+    "sk = StratifiedKFold(n_splits=5, shuffle=True, random_state=2023)\n",
+    "for i, (train, valid) in enumerate(sk.split(net_train_data, net_train_label)):\n",
+    "    x_train = net_train_data[train]\n",
+    "    y_train = net_train_label[train]\n",
+    "    x_valid = net_train_data[valid]\n",
+    "    y_valid = net_train_label[valid]\n",
     "    \n",
-    "#     # # 对训练数据进行随机过采样\n",
-    "#     # x_train, y_train = RandomOverSampler(random_state=2023).fit_resample(x_train, y_train)\n",
+    "    # # 对训练数据进行随机过采样\n",
+    "    # x_train, y_train = RandomOverSampler(random_state=2023).fit_resample(x_train, y_train)\n",
     "\n",
-    "#     x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
-    "#     x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
-    "#     y_train = torch.tensor(y_train, dtype=int)\n",
-    "#     y_valid = torch.tensor(y_valid, dtype=int)\n",
+    "    x_train = torch.tensor(x_train, dtype=torch.float).unsqueeze(-2)\n",
+    "    x_valid = torch.tensor(x_valid, dtype=torch.float).unsqueeze(-2)\n",
+    "    y_train = torch.tensor(y_train, dtype=int)\n",
+    "    y_valid = torch.tensor(y_valid, dtype=int)\n",
     "    \n",
-    "#     train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
-    "#     valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
+    "    train_loader = DataLoader(TensorDataset(x_train, y_train), batch_size=512, shuffle=True, num_workers=2)\n",
+    "    valid_loader = DataLoader(TensorDataset(x_valid, y_valid), batch_size=1024, shuffle=False)\n",
     "    \n",
-    "#     print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
-    "#     net = Net4().to(device)\n",
-    "#     s = train_net(net, train_loader, valid_loader, 30)\n",
-    "#     net4_states.append(s)\n",
+    "    print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
+    "    net = Net4().to(device)\n",
+    "    s = train_net(net, train_loader, valid_loader, 200)\n",
+    "    net4_states.append(s)\n",
     "\n",
-    "# # 保存模型参数\n",
-    "# torch.save(net4_states, 'net4_state.pkl')\n",
+    "# 保存模型参数\n",
+    "torch.save(net4_states, 'net4_state.pkl')\n",
     "\n",
     "\n",
     "net1_states = []\n",
@@ -1289,7 +1289,7 @@
     "    \n",
     "    print('\\nTraining {}th net. {}\\n'.format(i + 1, time.strftime('%H:%M:%S')))\n",
     "    net = Net().to(device)\n",
-    "    s = train_net(net, train_loader, valid_loader, 30)\n",
+    "    s = train_net(net, train_loader, valid_loader, 20)\n",
     "    net1_states.append(s)\n",
     "# 保存模型参数\n",
     "torch.save(net1_states, 'net1_state.pkl')\n"
@@ -1390,6 +1390,7 @@
     "            nn.Linear(128,4),\n",
     "            nn.Softmax(dim=1)\n",
     "        )\n",
+    "\n",
     "    def forward(self,x):\n",
     "        # x = x.view(x.size(0),1,x.size(1))\n",
     "        x = self.bn1(x)\n",
@@ -1427,6 +1428,7 @@
     "            nn.Linear(128,4),\n",
     "            nn.Softmax(dim=1)\n",
     "        )\n",
+    "\n",
     "    def forward(self,x):\n",
     "        # x = x.view(x.size(0),1,x.size(1))\n",
     "        x = self.bn1(x)\n",
@@ -1464,6 +1466,7 @@
     "            nn.Linear(128,4),\n",
     "            nn.Softmax(dim=1)\n",
     "        )\n",
+    "\n",
     "    def forward(self,x):\n",
     "        # x = x.view(x.size(0),1,x.size(1))\n",
     "        x = self.bn1(x)\n",
@@ -1556,6 +1559,10 @@
     "test_y_pred = test_avg.argmax(axis=1)\n",
     "# print(test_y_pred)\n",
     "\n",
+    "# optimization--6\n",
+    "pred_label = pd.DataFrame(test_y_pred)\n",
+    "print(pred_label)\n",
+    "pred_label.to_csv('pred_label.csv', index=False)\n",
     "\n",
     "# 将 test_avg 写入 submit.csv\n",
     "pred = pd.DataFrame(test_avg)\n",
@@ -1593,7 +1600,7 @@
     "        for s in range(2, 4):\n",
     "            submit.iloc[idx, ordered_value[s][1]+1] = 0   \n",
     "submit.to_csv('submit.csv',index=False)\n",
-    "print(submit)"
+    "print(submit)\n"
    ]
   },
   {
