--- a/v2.ipynb
+++ b/v2.ipynb
@@ -1512,47 +1512,47 @@
     "            cur_pred.extend(output)\n",
     "    test_pred.append(cur_pred)\n",
     "\n",
-    "# net = Net2().to(device)\n",
-    "# # 读入模型参数\n",
-    "# net_states = torch.load('net2_state.pkl')\n",
-    "# for s in net_states:\n",
-    "#     net.load_state_dict(s)\n",
-    "#     net.eval()\n",
-    "#     with torch.no_grad():\n",
-    "#         cur_pred = []\n",
-    "#         for i in range(100):\n",
-    "#             b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
-    "#             output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
-    "#             cur_pred.extend(output)\n",
-    "#     test_pred.append(cur_pred)\n",
+    "net = Net2().to(device)\n",
+    "# 读入模型参数\n",
+    "net_states = torch.load('net2_state.pkl')\n",
+    "for s in net_states:\n",
+    "    net.load_state_dict(s)\n",
+    "    net.eval()\n",
+    "    with torch.no_grad():\n",
+    "        cur_pred = []\n",
+    "        for i in range(100):\n",
+    "            b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
+    "            output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
+    "            cur_pred.extend(output)\n",
+    "    test_pred.append(cur_pred)\n",
     "\n",
-    "# net = Net3().to(device)\n",
-    "# # 读入模型参数\n",
-    "# net_states = torch.load('net3_state.pkl')\n",
-    "# for s in net_states:\n",
-    "#     net.load_state_dict(s)\n",
-    "#     net.eval()\n",
-    "#     with torch.no_grad():\n",
-    "#         cur_pred = []\n",
-    "#         for i in range(100):\n",
-    "#             b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
-    "#             output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
-    "#             cur_pred.extend(output)\n",
-    "#     test_pred.append(cur_pred)\n",
+    "net = Net3().to(device)\n",
+    "# 读入模型参数\n",
+    "net_states = torch.load('net3_state.pkl')\n",
+    "for s in net_states:\n",
+    "    net.load_state_dict(s)\n",
+    "    net.eval()\n",
+    "    with torch.no_grad():\n",
+    "        cur_pred = []\n",
+    "        for i in range(100):\n",
+    "            b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
+    "            output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
+    "            cur_pred.extend(output)\n",
+    "    test_pred.append(cur_pred)\n",
     "\n",
-    "# net = Net4().to(device)\n",
-    "# # 读入模型参数\n",
-    "# net_states = torch.load('net4_state.pkl')\n",
-    "# for s in net_states:\n",
-    "#     net.load_state_dict(s)\n",
-    "#     net.eval()\n",
-    "#     with torch.no_grad():\n",
-    "#         cur_pred = []\n",
-    "#         for i in range(100):\n",
-    "#             b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
-    "#             output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
-    "#             cur_pred.extend(output)\n",
-    "#     test_pred.append(cur_pred)\n",
+    "net = Net4().to(device)\n",
+    "# 读入模型参数\n",
+    "net_states = torch.load('net4_state.pkl')\n",
+    "for s in net_states:\n",
+    "    net.load_state_dict(s)\n",
+    "    net.eval()\n",
+    "    with torch.no_grad():\n",
+    "        cur_pred = []\n",
+    "        for i in range(100):\n",
+    "            b_x = test_signals[i * 200: (i + 1) * 200].to(device)\n",
+    "            output = nn.functional.softmax(net(b_x), dim=1).cpu().tolist()\n",
+    "            cur_pred.extend(output)\n",
+    "    test_pred.append(cur_pred)\n",
     "\n",
     "test_pred = np.array(test_pred)\n",
     "test_avg = test_pred.mean(axis=0)\n",
